k8s/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
